--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "echarts": "^4.4.0",
     "element-ui": "^2.13.0",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1",
